Fix chart options alignment

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -186,7 +186,7 @@ h4 {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   background-color: #0b2942;
   margin: 0.5rem;
 }
